# goit-typescript-hw-04

./: .env.example  .gitignore  Cargo.toml  Readme.md  bacon.toml  clippy.toml  docker-compose.yml  package-lock.json  package.json  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: config.rs  lib.rs  main.rs  session.rs
crates/api/src/features/user/: mod.rs  presentation.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: auth.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app/src/features/auth/: mod.rs  port.rs  service.rs
crates/app/src/features/user/: mod.rs  port.rs
crates/domain/: Cargo.toml
crates/domain/src/features/auth/: mod.rs
crates/domain/src/features/auth/entities/: mod.rs  provider_user.rs
crates/domain/src/features/user/: mod.rs
crates/domain/src/features/user/entities/: mod.rs  user.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/features/auth/: google.rs  mod.rs
crates/infrastructure/src/features/user/: mod.rs  repo.rs
migrations/: 001_users.sql  002_balances_transactions.sql  003_user_profiles.sql  004_accounts.sql  005_transactions.sql  006_transfers_estimates.sql
src/: config.rs  main.rs
src/auth/: mod.rs  routes.rs
src/auth/providers/: google.rs  mod.rs
src/db/: mod.rs
src/homework/: 1.tsx  3.tsx  4.tsx
src/middleware/: auth.rs
src/session/: mod.rs
