[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
api.workspace = true
infrastructure.workspace = true
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
async-trait = "0.1.89"
futures-util = "0.3.32"

[workspace]
resolver = "3"
members = ["crates/domain", "crates/app", "crates/api", "crates/infrastructure"]

[workspace.dependencies]
domain = { path = "crates/domain" }
app = { path = "crates/app" }
infrastructure = { path = "crates/infrastructure" }
api = { path = "crates/api" }
