[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
api.workspace = true
infrastructure.workspace = true
actix-web = "4"
dotenv = "0.15"

[workspace]
resolver = "3"
members = ["crates/domain", "crates/app", "crates/api", "crates/infrastructure"]

[workspace.dependencies]
domain = { path = "crates/domain" }
app = { path = "crates/app" }
infrastructure = { path = "crates/infrastructure" }
api = { path = "crates/api" }
