[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
api.workspace = true
infrastructure.workspace = true
actix-web = "4"
dotenv = "0.15"

[workspace]
resolver = "3"
members = ["crates/domain", "crates/app", "crates/api", "crates/infrastructure"]

[workspace.dependencies]
domain = { path = "crates/domain" }
app = { path = "crates/app" }
infrastructure = { path = "crates/infrastructure" }
api = { path = "crates/api" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
clone_on_ref_ptr = "warn"
nursery = { level = "warn", priority = -1 }

[lints]
workspace = true
