[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
infrastructure.workspace = true
actix-web = "4"
actix-session = { version = "0.11", features = ["redis-session"] }
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.32.7", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
async-trait = "0.1.89"
futures-util = "0.3.32"
actix-cors = "0.7.1"
