[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
app.workspace = true
domain.workspace = true
infrastructure.workspace = true
actix-web = "4"
actix-session = { version = "0.11", features = ["redis-session"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
futures-util = "0.3.32"
actix-cors = "0.7.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
