[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
app.workspace = true
domain.workspace = true
anyhow = "1"
sqlx = { version = "0.8.6", features = [
	"runtime-tokio-native-tls",
	"postgres",
	"uuid",
	"chrono",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
async-trait = "0.1.89"
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
